sql/sql_base.cc
@@ -1721,6 +1721,19 @@ find_field_in_tables(THD *thd,Item_field *item,TABLE_LIST *tables)
   const char *table_name=item->table_name;
   const char *name=item->field_name;
   uint length=(uint) strlen(name);
+  char name_buff[NAME_LEN+1];
+
+  if (db && lower_case_table_names)
+  {
+    /*
+      convert database to lower case for comparision.
+      We can't do this in Item_field as this would change the
+      'name' of the item which may be used in the select list
+    */
+    strmake(name_buff, db, sizeof(name_buff)-1);
+    casedn_str(name_buff);
+    db= name_buff;
+  }
 
   if (table_name)
   {						/* Qualified field */
